@@ -1,3 +1,9 @@
+2009-02-28  Thomas Fischl <tfischl@gmx.de>
+
+	Based on patch #6484 commited by Jurgis Brigmanis:
+	* usbasp.c: added software control for ISP speed
+	* usbasp.h: (Ditto.)
+
 2009-02-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* avr910.c (avr910_read_byte_flash): Eliminate a static variable that
